--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<button (click)="openDialog()">Open Dialog</button>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+<div class="mat-app-background basic-container">
+  <app-mat-tree></app-mat-tree>
+  <button (click)="openDialog()">Open Dialog</button>
+</div>
+
