--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,21 @@
 @import "~ag-grid/dist/styles/ag-grid.css";
 @import "~ag-grid/dist/styles/ag-theme-balham.css";
 @import "~@angular/cdk/overlay-prebuilt.css";
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 .cell-wrap-text {
   white-space: normal;
+}
+
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+}
+
+.basic-container {
+  padding: 30px;
+}
+
+.version-info {
+  font-size: 8pt;
+  float: right;
 }
